add Service Section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a class="nav-link" href="#">Contacts <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#service">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
@@ -35,6 +35,18 @@
         </div>
       </div>
     </header>
+
+      <div class="container services">
+        <h2 id="service">Services</h2>
+        <div class="row">
+          <div class="col do col-12">
+            What we do
+          </div>
+          <div class="col dont col-12">
+            what we don't do
+          </div>
+        </div>
+      </div>
 
 
   </body>
