add Service Section

--- a/index.html
+++ b/index.html
@@ -8,23 +8,17 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#"><span id="logo">Perfect Touch</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-            <a class="nav-link" href="#">Contacts <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#service">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+            <a class="nav-item nav-link" href="#">Services</a>
+            <a class="nav-item nav-link" href="#">Contacts</a>
+            <a class="nav-item nav-link" href="#">Location</a>
+          </div>
         </div>
       </nav>
 
@@ -35,18 +29,36 @@
         </div>
       </div>
     </header>
-
-      <div class="container services">
-        <h2 id="service">Services</h2>
-        <div class="row">
-          <div class="col do col-12">
-            What we do
-          </div>
-          <div class="col dont col-12">
-            what we don't do
+<!-- services  -->
+    <div class="album py-5 bg-light">
+          <div class="container">
+            <h2>Services</h2>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                  <img class="card-img-top" src="image/paint-touch-up.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h4>Paint Touch Up</h4>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                  <img class="card-img-top" src="image/headlight.png" alt="Card image cap">
+                  <div class="card-body">
+                    <h4>Headlight Restoration</h4>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
 
   </body>
