Start bottom container

--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
           </div>
         </div>
 
+        <!-- bottom container -->
+    <div class="bottom-container">
+      <div id="contacts">
+        <p>Phone: 510-111-1111</p>
+      </div>
+      <div class="Location">
+        <p>Hayward</p>
+        <p>Union City</p>
+        <p>Fremont</p>
+      </div>
+      <footer>
+        Check us out on YELP!
+      </footer>
+    </div>
 
   </body>
 </html>
