--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg ">
         <a class="navbar-brand" href="#"><span id="logo">Perfect Touch</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -22,8 +22,8 @@
         </div>
       </nav>
 
-      <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+      <div class="">
+        <div class="container1">
           <h1 class="display-4">Car Touch Up</h1>
           <p class="lead">We offer high quality services that will make your car look and feel like it's brand new!</p>
         </div>
